[package]
name = "arcus-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
async-std = { version = "1.12.0", features = [ "unstable", "attributes" ] }
rustyline-async = "0.4.2"
futures-util = { version = "0.3", features = ["io"] }
