[package]
name = "arcus-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rustyline = "14.0.0"
rustyline-derive = "0.10.0"
rsasl = { version = "2.2.0", features = ["provider"], default-features = true }
rpassword = "7.1"

[features]
with-file-history = []
